test-cases/negative/test_070_missing_operator.lay
# negative test: missing operator between values
# expected: parser should reject this

the variable x of type Number is 15


